mentor review fix